syntax = "proto3";

package io.harness.polling.contracts.service;

option java_multiple_files = true;
import "io/harness/polling/contracts/polling_item.proto";

service PollingFrameworkService {
  rpc subscribe(io.harness.polling.contracts.PollingItem) returns (PollingDocument);
  rpc unsubscribe(io.harness.polling.contracts.PollingItem) returns (PollingResponse);
}

message PollingDocument {
  string pollingDocId = 1;
}

message PollingResponse {
  bool subscriptionStatus = 1;
}